Modified all File

--- a/index.html
+++ b/index.html
@@ -1,96 +1,204 @@
 <!DOCTYPE html>
-<html> 
-	<head> 
-	<title>CATPhotoAPP</title>
-	</head>
-	<body> 
-		<!--Hello World-->
-		<!--The following below are the heading tags-->
-		<h1>This is heading 1</h1>
-		<h2>This is heading 2</h2>
-		<h3>This is heading 3</h3>
-		<h4>This is heading 4</h4>
-		<h5>This is heading 5</h5>
-		<h6>This is heading 6</h6>
-		
-		<!--The hr tag draws a horizontal> line through our view port-->
-		<hr /> <!--This is a self closing tags-->
+<html>
+  <head>
+    <title>WEB DESIGN</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html"><p>Home</p></a>
+        <a href="#"><p>About</p></a>
+        <a href="./form.html"><p>Contact Us</p></a>
+      </nav>
+    </header>
+    <main>
+      <div>
+        <h2>About Us</h2>
+        <img src="./assesst/HTML-PHOTOS.JPG" alt="" width="200px" />
 
-		<!--The parargraph tag-->
-		<p>The quick brown fox <br /> jumped of the lazy dog</p>
-		
-		<!-- Pre tag use to format text as it was written-->
-		<pre>The quick 		 brown fox jumped
-		over  the lazy dog</pre>
+        <p>
+          The strong element represents the stron importance, seriousness, or
+          urgency for its content. MDN Reference
+          <strong> jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</strong>
+          Gain practical skills for real-world tech support scenarios.
+          <i
+            >Acquire troubleshooting and communication skills directly
+            applicable to tech support</i
+          >.
+          <em
+            >Benefit from guidance and insights from experienced professionals
+            in the field. Build a network of contacts for potential career
+            opportunities. Some programs offer industry-recognized
+            certifications to enhance your resume. Increase employability and
+            set a path for advancement within tech support</em
+          >. Programs may have partnerships facilitating transition to full-time
+          employment. Develop a mindset of continuous learning to stay current
+          with industry trends and demands.
+        </p>
+      </div>
+      <p>X<sup>2</sup> + y<sub>3</sub></p>
 
+      <!--Hello World-->
+      <!--The following below are the heading tags-->
+      <h1>This is heading 1</h1>
+      <h2>This is heading 2</h2>
+      <h3>This is heading 3</h3>
+      <h4>This is heading 4</h4>
+      <h5>This is heading 5</h5>
+      <h6>This is heading 6</h6>
 
-		<!--Lists in HTML-->
-		<!--The Ordered List (OL)-->
-		<h2>List of Fruits</h2>
-		<ol  type="A" > start="4">
-			<li>Mango</li>
-			<li>Apple</li>
-			<li>Orange</li>
-			<li>Tomatoes</li>
-			<li>Pear</li>
-			<li>Strawberry</li>
-			<li>Soursop</li>
-		</ol>
+      <!--The hr tag draws a horizontal> line through our view port-->
+      <hr />
+      <!--This is a self closing tags-->
 
-		<!--The Unordered List (UL)-->
-		<h2>List of Cars Brand</h2>
-		<ul>
-			<li>BMW</li>
-			<li>Camry</li>
-			<li>Jeep</li>
-			<li>Toyota</li>
-			<li>Rolls Royce</li>
-			<li>Audi</li>
-		</ol>
+      <!--The parargraph tag-->
+      <p>
+        The quick brown fox <br />
+        jumped of the lazy dog
+      </p>
 
-		<!--The descriptive list (DL)-->
-		<h2>List of programing languages</h2>
-		<dl>
-			<dt>HTML</dt>
-			<dd>This is a structural language for formatting for formating a web page</dd>
+      <!-- Pre tag use to format text as it was written-->
+      <pre>
+The quick 		 brown fox jumped
+		over  the lazy dog</pre
+      >
 
-			<dt>CSS</dt>
-			<dd>This is the styling language for beautifying a web psge</dd>
+      <!--Lists in HTML-->
+      <!--The Ordered List (OL)-->
+      <h2>List of Fruits</h2>
+      <ol type="A">
+        start="4">
+        <li>Mango</li>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Tomatoes</li>
+        <li>Pear</li>
+        <li>Strawberry</li>
+        <li>Soursop</li>
+      </ol>
 
-			<dt>JAVASCRIPT</dt>
-			<dd>This is a scripting language for making the web page dynamic and interactive</dd>
-			<hr /> <!--This is a closing tag-->
+      <!--The Unordered List (UL)-->
+      <h2>List of Cars Brand</h2>
+      <ul>
+        <li>BMW</li>
+        <li>Camry</li>
+        <li>Jeep</li>
+        <li>Toyota</li>
+        <li>Rolls Royce</li>
+        <li>Audi</li>
+      </ul>
 
+      <!--The descriptive list (DL)-->
+      <h2>List of programing languages</h2>
+      <dl>
+        <dt>HTML</dt>
+        <dd>
+          This is a structural language for formatting for formating a web page
+        </dd>
 
-		</dl>
-		<hr /> <!--Adding an Image to HTML Document-->
-		<img src="./assesst/HTML-PHOTOS.JPG" alt="Photos of a fine lady" width="400px" />
-		<img src="https://clubrunner.blob.core.windows.net/00000002427/PhotoAlbum/branding/Mark-of-Excellence-4992.png" width="400px" />
-		
-		<!--Creating a Table in HTML-->
-		<table border="2">
+        <dt>CSS</dt>
+        <dd>This is the styling language for beautifying a web psge</dd>
+
+        <dt>JAVASCRIPT</dt>
+        <dd>
+          This is a scripting language for making the web page dynamic and
+          interactive
+        </dd>
+        <hr />
+        <!--This is a closing tag-->
+      </dl>
+      <hr />
+      <!--Adding an Image to HTML Document-->
+      <img
+        src="./assesst/HTML-PHOTOS.JPG"
+        alt="Photos of a fine lady"
+        width="400px"
+      />
+      <img
+        src="https://clubrunner.blob.core.windows.net/00000002427/PhotoAlbum/branding/Mark-of-Excellence-4992.png"
+        width="400px"
+      />
+
+      <!--Creating a Table in HTML-->
+      <table border="2">
+        <tr>
+          <th>Surname</th>
+          <th></th>
+          <th>State</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th rowspan="5">Phone</th>
+        </tr>
+        <tr>
+          <td>Ekwueme Charity</td>
+          <td>Enugu</td>
+          <td>Chinenye</td>
+          <td>ekwuemecharity.com</td>
+          <!--<td>555 +2347037594337</td>-->
+        </tr>
+        <tr>
+          <td colspan="3">Total</td>
+          <td>#70,000</td>
+        </tr>
+      </table>
+
+      <table border="2">
+        <caption>Score Sheet for Chemistry</caption>
+		<thead>
+			
 			<tr>
-				<td>Surname</td>
-				<td>State</td>
-				<td>Name</td>
-				<td>Email</td>
-				<td rowspan="5">Phone</td>
+				<th>Serial Number</th>
+				<th>Name of Student</th>
+				<th>Cat 40%</th>
+				<th>Exam 60%</th>
+				<th>Total</th>
+				<th>Grade</th>
+
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>00007777</td>
+				<td>Eze Chioma</td>
+				<td>32</td>
+				<td>45</td>
+				<td>77</td>
+				<td>A</td>
 			</tr>
 			<tr>
-				<td>Ekwueme Charity</td>
-				<td>Enugu</td>
-				<td>Chinenye</td>
-				<td>ekwuemecharity.com</td>
-				<!--<td>555 +2347037594337</td>-->
+				<td>00008888</td>
+				<td>Nneka Ugwu</td>
+				<td>15</td>
+				<td>35</td>
+				<td>50</td>
+				<td>C</td>
 			</tr>
 			<tr>
-				<td colspan="3">Total</td>
-				<td>#70,000</td>
+				<td>00009999</td>
+				<td>Charity Ekwueme</td>
+				<td>35</td>
+				<td>25</td>
+				<td>60</td>
+				<td>B</td>
 			</tr>
-		</table>
-	</body>
-
-
-
-
+			<tr>
+				<td>00001010</td>
+				<td>Obioma Ekwueme</td>
+				<td>17</td>
+				<td>27</td>
+				<td>44</td>
+				<td>D</td>
+			</tr>
+			<tr>
+				<td>000011111</td>
+				<td>Joy Odo</td>
+				<td>28</td>
+				<td>40</td>
+				<td>68</td>
+				<td>A</td>
+			</tr>
+		</tbody>
+      </table>
+    </main>
+  </body>
 </html>
