Introduction to Style CSS

--- a/form.html
+++ b/form.html
@@ -23,19 +23,18 @@
           <label for="email">Email</label>
           <input type="email" id="ekwuemecharity" name="email" /> <br />
           <label for="age">Age</label>
-          <input type=" number" id="age" name="age" /> <br />
+          <input type="number" min="18" max="50" id="age" name="age" /> <br />
           <label for="password">Password</label>
           <input type="password" id="password" name="password" /> <br />
           <label for="dob">Date of Birth</label>
           <input type="date" id="dob" name="date" /> <br />
           <label for="color">Favourite Color</label>
           <input type="color" id="color" name="color" /> <br />
+          <label for="telephone">Telephone</label>
+          <input type="number" id="telephone" name="telephone" /> <br />
           <label for="file">Upload a File</label>
           <input type="file" id="file" name="file" /> <br />
-          <!-- <label for="minimium">Minimium</label>
-          <input type="10" id="minimium"/> <br/>
-          <label for="maximium">Maximium</label>
-          <input type="20" id="maximium"/> <br/> -->
+          <input type="20" id="maximium" /> <br />
           <label for="country">Country</label>
           <select name="country" id="country">
             <option value="" disabled selected>--select your country--</option>
@@ -76,16 +75,34 @@
           <br />
 
           <!-- <button>Submit</button> -->
-          <input type="button" value="Submit" name="" id=""><!--when the type is button the form only create a clickable button that can not submit the form -->
-          <input type="submit" value="Submit" name="" id=""><!--when the type is button the form only create a unclickable button that can not submit the form -->
-          
+          <input
+            type="button"
+            value="Submit"
+            name=""
+            id=""
+          /><!--when the type is button the form only create a clickable button that can not submit the form -->
+          <input
+            type="submit"
+            value="Submit"
+            name=""
+            id=""
+          /><!--when the type is button the form only create a unclickable button that can not submit the form -->
         </form>
         <figure>
           <img src="" alt="" />
         </figure>
       </section>
       <section></section>
-      <section></section>
+      <section>
+        <h1 id="heading"></h1>
+        <h2 id="heading"></h2>
+        <h1></h1>
+        <h1></h1>
+        <p></p>
+        <tr></tr>
+
+        <td></td>
+      </section>
       <section>
         <h2>Blog Posts:Digital Marketing</h2>
         <article>
