--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html>
   <head>
     <title>WEB DESIGN</title>
+    <style>
+      ol li{
+        color:greenyellow
+      }
+      li{
+        color:blue
+      }
+      ul > li{
+        color:blueviolet
+      }
+      h2{
+        color:slateblue
+      }
+      span{
+        color:slateblue
+      }
+    </style>
   </head>
   <body>
     <header>
