--- a/form.html
+++ b/form.html
@@ -65,14 +65,14 @@
           <input type="checkbox" value="Igbo" name="language2" id="igbo" />
           <label for="hausa">Hausa</label>
           <input type="checkbox" value="Hausa" name="language3" id="hausa" />
-          <br />
-          <label for="gender">Select your Gender</label>
-          <br />
+          <fieldset>
+          <legend for="gender">Select your Gender</legend>
+  
           <label for="male">Male</label>
           <input type="radio" name="gender" id="male" value="male" />
           <label for="female">Female</label>
           <input type="radio" name="gender" id="female" value="female" />
-          <br />
+        </fieldset>
 
           <!-- <button>Submit</button> -->
           <input
@@ -138,6 +138,19 @@
         </article>
         <article></article>
       </section>
+      <section>
+       <!-- <audio src="https://cdn.trendybeatz.com/audio/Chief-Michael-Udegbi-Ndi-Ogwu-Ego-(TrendyBeatz.com).mp3
+      " type="audio/mp3" autoplay controls></audio> -->
+      </section>
+
+      <audio controls loop>
+        <source src="https://cdn.trendybeatz.com/audio/Chief-Michael-Udegbi-Ndi-Ogwu-Ego-(TrendyBeatz.com).mp3" type="audio/aac">
+        <source src="https://cdn.trendybeatz.com/audio/Chief-Michael-Udegbi-Ndi-Ogwu-Ego-(TrendyBeatz.com).mp3" type="audio/mp3">
+        Browser not support
+      </audio>
+      
+        <video src="https://cdn.trendybeatz.com/video/Winnaj-Lets-Party-Video-(TrendyBeatz.com).mp4" width="200px"></video>
+
     </main>
   </body>
 </html>
