CSS background properties

--- a/styling/index.html
+++ b/styling/index.html
@@ -1,72 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <header>
-        <h2>Logo.</h2>NIIT <span>Enugu</span></h2>
+      <h2>NIIT <span>Enugu</span></h2>
 
-        <nav class="nav"
+      <nav class="nav">
         <a href="" class="navlink">
-            <p>Home</p>
+          <p>Home</p>
         </a>
-        <nav class="nav"
         <a href="" class="navlink">
-            <p>Product</p>
+          <p>Product</p>
         </a>
-        <nav class="nav"
         <a href="" class="navlink">
-            <p>Blog</p>
+          <p>Blog</p>
         </a>
+      </nav>
     </header>
     <main>
-        <section> id="home"</section>
-        <section> id="product">
+      <section id="home">
+        <div>
+            <h1>
+                Explore the Future of Gadgets
+            </h1>
+          </div>
+      </section>
+      
+      <section id="product">
         <h2>Product</h2>
         <div class="card">
-            <figure>
-                <img src="https://www.pexels.com/photo/black-fujifilm-dslr-camera-90946/" alt="">
-                <h4> class="product-name">Digital Camera</h4>
-                <p class="product-disc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus adipisci est libero esse illum provident at officia amet porro saepe beatae neque iste ullam quibusdam error voluptates asperiores, ea unde.
-                Quaerat, perspiciatis placeat. Unde voluptate voluptatem necessitatibus accusamus ratione officiis eius tenetur ab quisquam labore, mollitia consectetur dolor quod nam aut quidem suscipit natus alias. Quis itaque quas ducimus ipsa.
-                Numquam dolorum consequatur cumque! Officiis fugiat dolore repellat, rem repellendus quasi est vero ad magni dignissimos perferendis, deserunt error quod, culpa ut reprehenderit minima doloremque voluptate eos ipsum fugit. Molestias.
-                Aperiam quos a provident, saepe nostrum fugit, totam cupiditate, error laboriosam pariatur incidunt. Id sit numquam neque, possimus voluptatibus illum. Sit exercitationem nisi ratione itaque est architecto necessitatibus nesciunt! Pariatur?
-                Obcaecati vero, mollitia laboriosam quasi minus rerum, nihil cupiditate, esse velit omnis tempore. Alias quidem aliquid iste at magni voluptatum, quia doloremque quaerat voluptates illum rem ipsam consectetur error repudiandae?</p>
-
-                <section> id="home"</section>
-                <section> id="product">
-                <h2>Product</h2>
-                <div class="card">
-                    <figure>
-                        <img src="https://www.pexels.com/photo/assorted-iphone-lot-341523/" alt="">
-                        <h4> class="product-name">Digital Camera</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eos iste libero veritatis? Eveniet tempore doloremque maiores fugit eos ut nihil quidem nobis velit ex excepturi, nisi labore magnam neque?
-                            Iure molestiae reiciendis harum, alias sed dicta laboriosam eum velit laborum vitae voluptatum earum, eaque, eos aperiam laudantium nam ex repudiandae quibusdam similique quas sequi facere ab non odio! Ab?
-                            Amet excepturi provident ratione enim quas rem ipsam modi perspiciatis, in eligendi reprehenderit quidem, sequi ea quae neque aliquid quod error adipisci cumque sint. Officia qui aut alias ad distinctio.
-                            Exercitationem rerum, voluptate totam iusto officiis, aliquid voluptates laboriosam iste laborum soluta magnam, corrupti ab? Eius nostrum, ipsa, officia facere unde quod ab perferendis a minima reprehenderit impedit voluptatum architecto.
-                            Beatae numquam ea, nesciunt, corporis facilis vero autem error recusandae laboriosam doloribus odit ex nulla dolor repudiandae cumque enim omnis praesentium iusto, nihil cum id accusantium sint! Saepe, corporis ipsa.
-                        </p>
-                        <section> id="home"</section>
-                        <section> id="product">
-                        <h2>Product</h2>
-                        <div class="card">
-                            <figure>
-                                <img src="https://www.pexels.com/photo/close-up-of-red-object-over-white-background-335257/" alt="">
-                                <h4> class="product-name">Digital Camera</h4>
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur, natus! Qui laudantium soluta dignissimos dolores facilis cum voluptas blanditiis, iste suscipit maxime. Corporis voluptas quae fugiat aliquam neque? Animi, voluptatibus.
-                                    Eaque deleniti, quibusdam id, aspernatur at quo harum omnis voluptate numquam repellendus debitis atque vel sunt magni ducimus. Vel reprehenderit in expedita velit similique minima consectetur ducimus nulla! Magnam, sint.
-                                    Aperiam atque dolorum odit beatae quae eveniet velit esse quaerat doloremque quod, iure voluptatibus in iusto numquam harum sunt placeat magni enim non dignissimos quis! Magni soluta assumenda expedita cumque.
-                                    Praesentium reprehenderit dicta veritatis impedit quidem expedita sit laborum voluptate nihil nobis eos voluptatum quo neque aut dolorem facilis repellendus facere ea vero aliquam non aliquid, odio enim fugit. Reprehenderit.
-                                    Laudantium itaque cupiditate commodi, dignissimos, minima obcaecati, incidunt ex repellendus dolore facere assumenda necessitatibus officia delectus labore. Maxime sunt numquam officiis sed, illum cumque, non corporis laboriosam, earum quae temporibus!
-                                </p>
-            </figure>
+          <figure>
+            <img
+              src="https://www.pexels.com/photo/black-fujifilm-dslr-camera-90946/"
+              alt=""
+            />
+          </figure>
+          <h4>class="product-name">Digital Camera</h4>
+          <p class="product-disc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
+            adipisci est libero esse illum provident at officia amet porro saepe
+            beatae neque iste ullam quibusdam error voluptates asperiores, ea
+            unde. Quaerat, perspiciatis placeat. Unde voluptate voluptatem
+            necessitatibus accusamus ratione officiis eius tenetur ab quisquam
+            labore, mollitia consectetur dolor quod nam aut quidem suscipit
+            natus alias. Quis itaque quas ducimus ipsa. Numquam dolorum
+            consequatur cumque! Officiis fugiat dolore repellat, rem repellendus
+            quasi est vero ad magni dignissimos perferendis, deserunt error
+            quod, culpa ut reprehenderit minima doloremque voluptate eos ipsum
+            fugit. Molestias. Aperiam quos a provident, saepe nostrum fugit,
+            totam cupiditate, error laboriosam pariatur incidunt. Id sit numquam
+            neque, possimus voluptatibus illum. Sit exercitationem nisi ratione
+            itaque est architecto necessitatibus nesciunt! Pariatur? Obcaecati
+            vero, mollitia laboriosam quasi minus rerum, nihil cupiditate, esse
+            velit omnis tempore. Alias quidem aliquid iste at magni voluptatum,
+            quia doloremque quaerat voluptates illum rem ipsam consectetur error
+            repudiandae?
+          </p>
         </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
