Studio class and element

--- a/styling/index.html
+++ b/styling/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
-      <h2>NIIT <span>Enugu</span></h2>
-
+    <header class="header">
+      <h2 class="logo">NIIT <span>Enugu</span></h2>
       <nav class="nav">
         <a href="" class="navlink">
           <p>Home</p>
@@ -20,49 +19,104 @@
         <a href="" class="navlink">
           <p>Blog</p>
         </a>
+        <a href="" class="navlink">
+          <p>Reach Us</p>
+        </a>
       </nav>
     </header>
     <main>
       <section id="home">
         <div>
-            <h1>
-                Explore the Future of Gadgets
-            </h1>
-          </div>
+          <h1>Explore the Future of Gadgets</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            veritatis consequatur quae illo? Soluta commodi sunt quos vel
+            dolores odit, ratione vero modi rem ab recusandae porro repellendus,
+            voluptate voluptas.
+          </p>
+        </div>
+        <button>Learn More</button>
       </section>
-      
+
       <section id="product">
-        <h2>Product</h2>
+        <h2>Products</h2>
         <div class="card">
           <figure>
             <img
-              src="https://www.pexels.com/photo/black-fujifilm-dslr-camera-90946/"
-              alt=""
+              src="https://images.unsplash.com/photo-1620916566398-39f1143ab7be?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="200px"
             />
           </figure>
-          <h4>class="product-name">Digital Camera</h4>
-          <p class="product-disc">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
-            adipisci est libero esse illum provident at officia amet porro saepe
-            beatae neque iste ullam quibusdam error voluptates asperiores, ea
-            unde. Quaerat, perspiciatis placeat. Unde voluptate voluptatem
-            necessitatibus accusamus ratione officiis eius tenetur ab quisquam
-            labore, mollitia consectetur dolor quod nam aut quidem suscipit
-            natus alias. Quis itaque quas ducimus ipsa. Numquam dolorum
-            consequatur cumque! Officiis fugiat dolore repellat, rem repellendus
-            quasi est vero ad magni dignissimos perferendis, deserunt error
-            quod, culpa ut reprehenderit minima doloremque voluptate eos ipsum
-            fugit. Molestias. Aperiam quos a provident, saepe nostrum fugit,
-            totam cupiditate, error laboriosam pariatur incidunt. Id sit numquam
-            neque, possimus voluptatibus illum. Sit exercitationem nisi ratione
-            itaque est architecto necessitatibus nesciunt! Pariatur? Obcaecati
-            vero, mollitia laboriosam quasi minus rerum, nihil cupiditate, esse
-            velit omnis tempore. Alias quidem aliquid iste at magni voluptatum,
-            quia doloremque quaerat voluptates illum rem ipsam consectetur error
-            repudiandae?
+          <h4 cl="product-name">BODY LOTION</h4>
+          <p class="product-desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat quo
+            consequuntur expedita porro numquam dicta facilis saepe recusandae,
+            soluta nam maiores repudiandae, molestias sunt ipsum deserunt iste
+            eos eius sequi. <a href="https://google.com" class="ABC" target="_blank">See more</a>
           </p>
+          <button>Buy now</button>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1541643600914-78b084683601?q=80&w=1904&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="200px"
+            />
+          </figure>
+          <h4 cl="product-name">PERFUME</h4>
+          <p class="product-desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis
+            pariatur sunt repudiandae esse inventore itaque. Odio, vero
+            similique aliquid non sequi dolorum rem recusandae ipsum aperiam
+            commodi, et, vel temporibus?
+          </p>
+          <button>Buy now</button>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1604603815783-2bd94c5a819f?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="200px"
+            />
+          </figure>
+          <h4 cl="product-name">FACE WASH</h4>
+          <p class="product-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            voluptas ad nobis aliquid libero distinctio, est atque aut
+            voluptates repellat ab quos, adipisci qui dignissimos? Sunt,
+            praesentium iusto. Nisi, sit.hetguudh styjujwks
+          </p>
+          <button>Buy now</button>
         </div>
       </section>
+    <section id="blog">
+    <ul>
+      <li>Feature</li>
+      <li>Recent</li>
+      <li>Old</li>
+    </ul>
+    <div>
+      <p>A</p> 
+      <p>B</p>
+      <p>C</p>
+      <p>D</p>
+      <p>E</p>
+    </div>
+
+  </section>
+      <section id="contact">
+        <form action="">
+          <label for="name">Name;</label>
+          <input type="text" name="name" id="name" />
+
+          <label for="email">Email;</label>
+          <input type="email" name="email" id="email" />
+
+          <label for="comment">Comment</label>
+          <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+        </form>
+
+      </esction>
     </main>
   </body>
 </html>
